--- a/UrlShortener/UrlShortener/css/style.css
+++ b/UrlShortener/UrlShortener/css/style.css
@@ -3,7 +3,7 @@
 }
 
 header {
-    background-color: skyblue;
+    background-color: black;
     height: 60px;
     display: flex;
     justify-content: center;
@@ -20,21 +20,48 @@ header {
     width: 30%;
     text-align: center;
     text-decoration: none;
-    color: black;
+    color: white;
 }
 
 #url-area {
-    margin-top: 70px;
+    margin: 70px auto;
+    font-size: 30px;
     text-align: center;
-
+    padding: 50px;
+    border-radius: 10px;
+    background-color: rgb(207, 223, 236);
+    align-items: center;
+    width: 80%;
 }
 
-#url {
+.url {
     display: block;
-    width: 400px;
+    width: 80%;
     height: 40px;
     margin: 30px auto;
-    font-size: 18px;
+    border-radius: 5px;
+    font-size: 22px;
     border: 2px solid black;
     outline: none;
+}
+
+.short-url {
+    margin: 20px;
+}
+
+.btn {
+    display: block;
+    margin: auto;
+    background-color: black;
+    color: white;
+    font-size: 20px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.result-area {
+    margin: 20px;
+    display: flex;
+    justify-content: center;
 }
